--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.3</version>
+		<version>3.1.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.ero</groupId>
-	<artifactId>servidopublico</artifactId>
+	<groupId>com.abctreinamentos</groupId>
+	<artifactId>servidorpublico</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>servidopublico</name>
-	<description>Demo project for Spring Boot</description>
+	<name>servidorpublico</name>
+	<description>Aplicação Servidor Público</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>20</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
